--- a/gb/20/8/30/n12367868.md
+++ b/gb/20/8/30/n12367868.md
@@ -1,63 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/utwpym373/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/utwpym373/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/utwpym373/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/utwpym373/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台湾馆长枪击案警追凶嫌金流 黄国昌任无偿律师</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年08月30日讯】（大纪元记者袁世钢台湾台北报导）近距离<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB.md#1">枪击</a>知名网红“<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E9%A6%86%E9%95%BF.md#1">馆长</a>”陈之汉的凶嫌23岁刘男，虽然坚称是因为性骚扰事件与馆长发生纠纷才会犯案；但他犯案手法缜密，且犯案后立即投案，并高价聘请两名知名辩护<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E5%BE%8B%E5%B8%88.md#1">律师</a>等不寻常行径，引发外界质疑有幕后指使者。警方将持续调查他的<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E9%87%91%E6%B5%81.md#1">金流</a>来源，厘清相关疑点。</p>
-<p>据了解，刘嫌曾是超商店员，曾因持有及吸食三、四级毒品遭裁罚，目前无业。外界质疑，刘嫌住在台北市内湖区，却前往相距甚远的新北市林口区健身房入会，随后又刻意触摸<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E9%A6%86%E9%95%BF.md#1">馆长</a>身体而制造冲突，且犯案时使用枪支、犯案后立即投案的动作都违反常理，加上他将枪支来源推给已故友人的供词相当常见，因此，道上传言应是遭竹联帮雷堂吸收。</p>
+<p>【大纪元2020年08月30日讯】（大纪元记者袁世钢台湾台北报导）近距离<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB.md#1">枪击</a>知名网红“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%86%E9%95%BF.md#1">馆长</a>”陈之汉的凶嫌23岁刘男，虽然坚称是因为性骚扰事件与馆长发生纠纷才会犯案；但他犯案手法缜密，且犯案后立即投案，并高价聘请两名知名辩护<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BE%8B%E5%B8%88.md#1">律师</a>等不寻常行径，引发外界质疑有幕后指使者。警方将持续调查他的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%91%E6%B5%81.md#1">金流</a>来源，厘清相关疑点。</p>
+<p>据了解，刘嫌曾是超商店员，曾因持有及吸食三、四级毒品遭裁罚，目前无业。外界质疑，刘嫌住在台北市内湖区，却前往相距甚远的新北市林口区健身房入会，随后又刻意触摸<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A6%86%E9%95%BF.md#1">馆长</a>身体而制造冲突，且犯案时使用枪支、犯案后立即投案的动作都违反常理，加上他将枪支来源推给已故友人的供词相当常见，因此，道上传言应是遭竹联帮雷堂吸收。</p>
 <p>不过，据媒体报导，某雷堂大哥已否认此事，并指馆长应另有仇家，包含馆长曾提到以泼秽物、开枪恐吓他的统促党，还有天道盟美鹰会，及曾到健身房骚扰、自称林口当地角头的人士；也有道上传闻，与馆长在台中11期崇德商圈高调拓店，不慎踩到当地黑帮地盘有关。对此，警方未证实。</p>
-<p>至于侦办进度，由于刘嫌拒绝提供iPhone手机解锁密码，专案小组已将手机送往刑大科侦组解锁，深入追查是否有共犯、刘嫌的<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E5%BE%8B%E5%B8%88.md#1">律师</a>费及健身房会费等<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E9%87%91%E6%B5%81.md#1">金流</a>来源，以厘清相关疑点，并扩大调阅案发地点附近监视器，厘清刘嫌是否曾于案发前到场勘查。</p>
-<p>此外，馆长30日在脸书分享他的律师委任契约，将由前时代力量立委<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E9%BB%84%E5%9B%BD%E6%98%8C.md#1">黄国昌</a>，以律师身份针对此“非法<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB.md#1">枪击</a>案件”担任其代理人，参与检警侦查程序、法院审判程序，替他主张法律权益、尽力追查事实真相。契约中也载明，此案属“公益案件”，因此无委任酬金。</p>
+<p>至于侦办进度，由于刘嫌拒绝提供iPhone手机解锁密码，专案小组已将手机送往刑大科侦组解锁，深入追查是否有共犯、刘嫌的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BE%8B%E5%B8%88.md#1">律师</a>费及健身房会费等<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%91%E6%B5%81.md#1">金流</a>来源，以厘清相关疑点，并扩大调阅案发地点附近监视器，厘清刘嫌是否曾于案发前到场勘查。</p>
+<p>此外，馆长30日在脸书分享他的律师委任契约，将由前时代力量立委<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%BB%84%E5%9B%BD%E6%98%8C.md#1">黄国昌</a>，以律师身份针对此“非法<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB.md#1">枪击</a>案件”担任其代理人，参与检警侦查程序、法院审判程序，替他主张法律权益、尽力追查事实真相。契约中也载明，此案属“公益案件”，因此无委任酬金。</p>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365773.md#1">台湾馆长枪击案 法院裁定凶嫌羁押禁见</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365776.md#1">【十字路口】馆长遇袭谁搞鬼？川普连任台受益</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365911.md#1">馆长遭枪击 医师：恢复良好 已可边换药边开玩笑</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365917.md#1">馆长枪伤 医院：恢复良好已可边换药边开玩笑</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367878.md#1">捷克团抵台湾桃园机场 配徽章象征两国情谊</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367870.md#1">捷克参访团抵台 89名团员无发烧顺利入境</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367872.md#1">捷克议长抵台 蔡英文：展开全方位深入交流</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367874.md#1">剖析安倍请辞 台专家：确保亲美抗共路线延续</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367876.md#1">美猪牛进口松绑 台青协：应有社会共识</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367824.md#1">与捷克民意为敌没好下场 游锡堃：中共不妙了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/29/n12365773.md#1">台湾馆长枪击案 法院裁定凶嫌羁押禁见</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/29/n12365776.md#1">【十字路口】馆长遇袭谁搞鬼？川普连任台受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/29/n12365911.md#1">馆长遭枪击 医师：恢复良好 已可边换药边开玩笑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/29/n12365917.md#1">馆长枪伤 医院：恢复良好已可边换药边开玩笑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616470.md#1">台海情势受关注 蔡英文：民主是唯一选项</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616369.md#1">台湾边境渐松绑 旅游业者已接包团订单</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616367.md#1">庇护乌克兰难民 徐国勇：以不推回原则处理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616284.md#1">狱中指挥议员女儿诈助理费 高雄前议员重判10年5月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616286.md#1">越南女移工成整形密医 私设医美诊所1年赚300万</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616290.md#1">首梯新制教召5日登场 每日施训10小时两周无休</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/utwpym373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147841.md#1" target="_blank">袁斌：河南信阳姜寨村大饥荒时代的往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365943.md#1">【大选观察】解读最新民调 川普胜算几何？</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12365852.md#1">【拍案惊奇】华为猛加班抗美 中共经济死螺旋</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12366421.md#1">【视频】山西襄汾聚仙饭店坍塌多人伤亡</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363644.md#1">台湾馆长中枪影片曝光 黄国昌：绝非只是警告</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12364611.md#1">专家：川普或打算于第二任期内解体中共</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/27/n12362745.md#1">台湾网红馆长陈之汉遭枪击 鲜血直流紧急送医</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/27/n12362251.md#1">赞台湾民主自由 中国网红微博账号遭永久删除</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/26/n12357679.md#1">自制6种“天然清洁剂” 难缠污垢一次搞定</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363839.md#1">在台湾待一段时间 大陆网红赞高自由度</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363975.md#1">安倍晋三因溃疡性大肠炎再辞职！4症状是警讯</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/25/n12357051.md#1">【罗厨寻味】番茄炒牛肉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/utwpym373/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/utwpym373/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/30/n12367868.htm">台湾馆长枪击案警追凶嫌金流 黄国昌任无偿律师</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/30/n12367868.htm">台湾馆长枪击案警追凶嫌金流 黄国昌任无偿律师</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367868.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/utwpym373/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/utwpym373/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/utwpym373/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/30/n12367868.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
